correct duplicate labels in single-algorithm template

--- a/code-postprocessing/latex-templates/templateBBOBconstrained.tex
+++ b/code-postprocessing/latex-templates/templateBBOBconstrained.tex
@@ -240,7 +240,7 @@ unsuccessful trial under consideration.
 \includegraphics[width=0.19\textwidth]{ppfigdim_f030}
 \end{tabular}
 \vspace{-3ex}
- \caption{\label{fig:ERTgraphs}
+ \caption{\label{fig:ERTgraphsOne}
  \bbobppfigdimlegend{$f_1$}
  }
 \end{figure*}
@@ -273,7 +273,7 @@ unsuccessful trial under consideration.
 \includegraphics[width=0.19\textwidth]{ppfigdim_f054}
 \end{tabular}
 \vspace{-3ex}
- \caption{\label{fig:ERTgraphs}
+ \caption{\label{fig:ERTgraphsTwo}
  \bbobppfigdimlegend{$f_{54}$}
  }
 \end{figure*}
@@ -471,7 +471,7 @@ unsuccessful trial under consideration.
 \includegraphics[width=0.19\textwidth]{pprldmany-single-functions/pprldmany_f054}
 \vspace*{-1ex}
 \end{tabular}
- \caption{\label{fig:ECDFsingleOne}
+ \caption{\label{fig:ECDFsingleTwo}
    \bbobecdfcaptionsinglefunctionssingledim{$\!\!$s 2 to 40 and problem IDs 31 to 54}
 }
 \end{figure*}
@@ -519,7 +519,7 @@ unsuccessful trial under consideration.
 \includegraphics[width=0.24\textwidth]{"pprldmany-single-functions/pprldmany_all m=9ndiv2+9"}
 \vspace*{-1ex}
 \end{tabular}
- \caption{\label{fig:ECDFsingleOne}
+ \caption{\label{fig:ECDFgroups}
  \bbobecdfcaptionallgroups{}
  }
 \end{figure*}
